# AAS

./: CLAUDE.md  CMakeLists.txt  README.md
docs/: schema.md
examples/: adg1419-analog-switch.json  ads1115-adc.json  ideal-comparator-behavioral.json  ideal-integrator-behavioral.json  ideal-multiplier-behavioral.json  ideal-samplehold-behavioral.json  ideal-summer-behavioral.json  opa192-precision-opamp.json  tlv3201-comparator.json
schemas/: AAS.json  adc.json  analogSwitch.json  buffer.json  comparator.json  dac.json  differenceAmplifier.json  inputs.json  instrumentationAmplifier.json  integrator.json  multiplexer.json  multiplier.json  operationalAmplifier.json  outputs.json  programmableGainAmplifier.json  sampleHold.json  summer.json  utils.json
schemas/inputs/: designRequirements.json
scripts/: validate.py
src/: AasConverter.cpp  AasConverter.hpp
tests/: test_aas.cpp
